// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button-component (new spec) accordion props: sets aria-expanded/controls and toggles when isOpen changes 1`] = `
<button aria-controls="panel-1" aria-expanded="true" aria-label="Toggle Section" class="btn" role="button" type="button">
  <span class="btn__content">
    Toggle Section
  </span>
</button>
`;

exports[`button-component (new spec) applies aria-pressed only when toggle=true; respects aria-label override 1`] = `
<button aria-label="Submit form" aria-pressed="true" class="btn btn--toggle pressed" role="button" type="button">
  <span class="btn__content">
    Submit
  </span>
</button>
`;

exports[`button-component (new spec) btnIcon (icon-only) uses fallback aria-label "Button" when no text/aria provided 1`] = `
<button aria-label="Button" class="btn btn-icon" role="button" type="button">
  <span aria-hidden="true">
    <span>
      🔔
    </span>
  </span>
</button>
`;

exports[`button-component (new spec) grouped button with start placement adds group classes 1`] = `
<button aria-label="Start Btn" class="btn btn-group btn-group-start" role="button" type="button">
  <span class="btn__content">
    Start Btn
  </span>
</button>
`;

exports[`button-component (new spec) iconBtn wraps slot in .btn__content 1`] = `
<button aria-label="Button" class="btn icon-btn" role="button" type="button">
  <span aria-hidden="true" class="btn__content">
    <span>
      🔔
    </span>
  </span>
</button>
`;

exports[`button-component (new spec) renders <a> link with aria-disabled and proper role/tabindex when disabled 1`] = `
<a aria-disabled="true" aria-label="Disabled Link" class="btn link" role="button" tabindex="-1">
  <span class="btn__content">
    Disabled Link
  </span>
</a>
`;

exports[`button-component (new spec) renders default <button> with text and stable aria-label 1`] = `
<button aria-label="Click me" class="btn" role="button" type="button">
  <span class="btn__content">
    Click me
  </span>
</button>
`;

exports[`button-component (new spec) slotSide="left" adds ms-1 and keeps me-1 off 1`] = `
<button aria-label="With Icon" class="btn" role="button" type="button">
  <span class="btn__side left">
    <span>
      🌟
    </span>
  </span>
  <span class="btn__content ms-1">
    With Icon
  </span>
</button>
`;

exports[`button-component (new spec) slotSide="right" adds me-1 and keeps ms-1 off 1`] = `
<button aria-label="Next" class="btn" role="button" type="button">
  <span class="btn__content me-1">
    Next
  </span>
  <span class="btn__side right">
    <span>
      ➡️
    </span>
  </span>
</button>
`;
